--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,10 @@
 name: Pages
- 
+
 on:
   push:
     branches:
       - gh-pages # 我们设置的分支是 gh-pages
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,14 +12,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          # If your repository depends on submodule, please see: https://github.com/actions/checkout
           submodules: recursive
+
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          # Examples: 20, 18.19, >=16.20.2, lts/Iron, lts/Hydrogen, *, latest, current, node
-          # Ref: https://github.com/actions/setup-node#supported-version-syntax
-          node-version: "22.12.0"
+          node-version: "20" # 最新稳定版本即可
+
       - name: Cache NPM dependencies
         uses: actions/cache@v4
         with:
@@ -27,23 +26,26 @@ jobs:
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
             ${{ runner.OS }}-npm-cache
+
       - name: Install Dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: ./public # 指向生成的静态文件目录
+
   deploy:
     needs: build
+    runs-on: ubuntu-latest
     permissions:
       pages: write
       id-token: write
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+      name: github-pages # 如果环境启用了保护规则
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
