--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: klp
-subtitle: '这是一个奇妙的地方'
+title: wumocrep
+subtitle: '天才在左，我在右'
 description: ''
 keywords:
-author: John Doe
-language: en
+author: wumocrep
+language: zh-CN
 timezone: ''
 
 # URL
