update and debug about

--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -1,4 +1,4 @@
-- class_name: 关于页
+- class_name: about
   subtitle: 天才在左，我在右
   avatarImg: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/sample_image.JPG
   avatarSkills:
