--- a/source/_data/creativity.yml
+++ b/source/_data/creativity.yml
@@ -9,3 +9,21 @@
     - name: Git
       color: "#df5b40"
       icon: https://bu.dusays.com/2023/04/09/643293b10ccdd.webp
+    - name: Unity
+      color: "#4D4D4D"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/Unity.png
+    - name: Davinci
+      color: "#ffffff"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/Davinci.jpeg
+    - name: PostgreSQL
+      color: "#3366cc"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/PostgreSQL.png
+    - name: C++
+      color: "#3366cc"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/C%2B%2B.png
+    - name: C#
+      color: "#9f20f4"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/C%23.png
+    - name: ChatGPT
+      color: "#b147f7"
+      icon: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/OpenAI.png
