--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -12,7 +12,7 @@
   description: 是一名 学生、独立游戏开发者、博主、Coser
   aboutsiteTips:
     tips: 追求
-    title1: 因为喜欢
+    title1: 因为活着
     title2: 所以勇敢去爱
     word:
       - 学习
@@ -51,7 +51,7 @@
   personalities:
     author_name: 竞选者 快乐小狗
     personality_type: ENFP
-    photo_url: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/%E6%9C%AC%E4%BA%BA%E8%87%AA%E6%8B%8D.JPG
+    photo_url: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/%E6%9C%AC%E4%BA%BA%E8%87%AA%E6%8B%8D_%E5%B0%8F.JPG
     personality_img: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/ENFP.png
     name_url: https://www.16personalities.com/ch/enfp-人格
   maxim:
