--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -1070,8 +1070,8 @@ home_top:
       icon: anzhiyu-icon-images
     - name: 精品咖啡
       path: /categories/精品咖啡/
-      shadow: var(--anzhiyu-shadow-brown)
-      class: brown
+      shadow: var(--anzhiyu-shadow-blue)
+      class: blue
       icon: <FontAwesomeIcon icon="fa-solid fa-coffee-bean" />
   default_descr: 再怎么看我也不知道怎么描述它的啦！
   swiper:
