更新个人生涯与其图片2

--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -36,7 +36,7 @@
         color: "#008cb4"
       - desc: XACADEMY
         color: "#a8a8a8"
-    img: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/%E6%97%B6%E9%97%B4%E8%BD%B4%202024%20%E5%B9%B4%E7%89%88.png
+    img: https://cdn.jsdelivr.net/gh/Ingo-Quach/webTuChuang@main/%E6%97%B6%E9%97%B4%E8%BD%B4%202024%20%E5%B9%B4%E7%89%88_%E5%A4%A7%E5%B0%8F%E5%90%88%E9%80%82%E7%89%88.png
   statistic:
     link: /archives
     text: 文章隧道
