--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -10,7 +10,7 @@ menu:
   #   留言板: /comments/ || anzhiyu-icon-envelope
 
    我的:
-     音乐馆: /music/ || anzhiyu-icon-music
+     音乐馆: /music//?id=9128979757&server=netease  || anzhiyu-icon-music
   #   追番页: /bangumis/ || anzhiyu-icon-bilibili
   #   相册集: /album/ || anzhiyu-icon-images
   #   小空调: /air-conditioner/ || anzhiyu-icon-fan
@@ -18,7 +18,7 @@ menu:
    关于:
      关于本人: /about/|| anzhiyu-icon-paper-plane
   #   闲言碎语: /essay/ || anzhiyu-icon-lightbulb
-  #   随便逛逛: javascript:toRandomPost() || anzhiyu-icon-shoe-prints1
+     随便逛逛: javascript:toRandomPost() || anzhiyu-icon-shoe-prints1
 
 # nav相关配置
 nav:
