--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -75,8 +75,9 @@ author_status:
     - 🔨 设计开发一条龙
     - 🤖️ 数码科技爱好者
     - 🔍 分享与热心帮助
+    - 📹 Cosplay 爱好者 
     # - 🏠 智能家居小能手
-    - 🔨 设计开发一条龙
+    #- 🔨 设计开发一条龙
     # - 🤝 专修交互与设计
     # - 🏃 脚踏实地行动派
     # - 🧱 团队小组发动机
