Update blog link, author status image, and card description
Changed the blog link in navigation, updated the author status image, and revised the author card description to better reflect the site's content and author background.

--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -29,7 +29,7 @@ nav:
     - title: 网页
       item:
         - name: 博客
-          link: https://wumocrep.us.kg
+          link: https://ingoquach.me
           icon: /img/favicon.ico
 
 
@@ -69,7 +69,7 @@ social:
 author_status:
   enable: true
   # 可以是任何图片，建议放表情包或者emoji图片，效果都很好，[表情包速查](https://emotion.xiaokang.me/)
-  statusImg: "https://bu.dusays.com/2021/01/15/3508bec04270f.png"
+  statusImg: "https://emotion.acs.pw/emotion/bilibili_littleTv/太太喜欢.png"
   skills:
     - ☕️ 精品咖啡爱好者
     - 🔨 设计开发一条龙
@@ -807,7 +807,7 @@ aside:
     category: true
   card_author:
     enable: true
-    description: # <div style="line-height:1.38;margin:0.6rem 0;text-align:justify;color:rgba(255, 255, 255, 0.8);">这有关于<b style="color:#fff">产品、设计、开发</b>相关的问题和看法，还有<b style="color:#fff">文章翻译</b>和<b style="color:#fff">分享</b>。</div><div style="line-height:1.38;margin:0.6rem 0;text-align:justify;color:rgba(255, 255, 255, 0.8);">相信你可以在这里找到对你有用的<b style="color:#fff">知识</b>和<b style="color:#fff">教程</b>。</div> # 默认为站点描述
+    description: <div style="line-height:1.38;margin:0.6rem 0;text-align:justify;color:rgba(255, 255, 255, 0.8);max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;">这里是一个在学习 CS 和一些奇怪的东西的学生的记事簿，可能会有日常趣事的分享(?)</div><div style="line-height:1.38;margin:0.6rem 0;text-align:justify;color:rgba(255, 255, 255, 0.8);max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;">不过你应该可以在这里找到对你有用的知识和教程\\(@'v'@)/*</div>
     name_link: /
 
   card_announcement:
